# aos-dr

./: CMakeLists.txt  README.md
doc/: AssembleAndBuildCfe.txt  DR_User_Manual.docx
fsw/for_build/: Makefile
fsw/mission_inc/: dr_perfids.h
fsw/platform_inc/: dr_msgids.h
fsw/src/: dr_app.c  dr_app.h  dr_d_matrix_tbl.h  dr_events.h  dr_mode_def.h  dr_msg.h  dr_print_results.c  dr_print_results.h  dr_process_d_matrix.c  dr_process_d_matrix.h  dr_process_tests.c  dr_process_tests.h  dr_save_results.c  dr_save_results.h  dr_types.h  dr_version.h  dr_wtm_tbl.h
fsw/tables/: dr_d_matrix_ex.c  dr_mode_def.c  dr_wtm_example.c  lc_def_wdt_ex.c
fsw/unit_test/: CMakeLists.txt  dr_test_d_matrix_args.c  dr_test_d_matrix_args.h  dr_test_d_matrix_examples.c  dr_test_d_matrix_examples.h  dr_test_d_matrix_swaps.c  dr_test_d_matrix_swaps.h  dr_unit_test_main.c
matlab/: buildDrMex.m  dr_mex.c  testDrMex.m
